# isONcorrect

./: .travis.yml  README.md  isONcorrect  isONcorrect2  isONcorrect3  pyproject.toml  requirements.txt  run_isoncorrect  setup.py
cemetary/: align.py  create_reference.py  isONcorrect  isONcorrect2
data/: canu_sim_error_rate.csv  isoncorrect_eval_files.tar.bz2.partam  sirv_subsampling_error_rates.eps
data/results/: all_datasets_errors.py  sim_exponential_abundance.csv.bz2  sim_uniform_abundance.csv.bz2
evaluation/: Snakefile  cluster.json  experiments.json  plots.py  snakefile_mouse  submit_main_snakemake.sh
evaluation_sim/: Snakefile  annotate_transcript_with_mappability.py  cluster.json  experiments.json  get_error_rate_and_mappability.py  isoncorrect_diff_error_rates.sh  plot_abundance_diff.py  plot_error_rates.py  plots.py
evaluation_sirv/: Snakefile  cluster.json  experiments.json  plots.py
evaluation_sirv_iso_cov/: Snakefile  cluster.json  plot.py  plot_overcorrected_isoforms.py  sirv_subsample_depth.py  sirv_subsample_isoforms.py
isoncorrect_cpp/: .gitmodules  CMakeLists.txt  Makefile.txt  README.md
isoncorrect_cpp/isONcorrect/: argparse.hpp  isONcorrect.cpp
isoncorrect_cpp/src/: isoncorrect_test  main.cpp
modules/: align.py  correct_seqs.py  create_augmented_reference.py  help_functions.py  kmer_analysis.py  weighted_interval_scheduling.py
ont_error_rates/: Snakefile  cluster.json  experiments.json  get_read_accuracies.py  plots.py
scripts/: README.md  all_error_rates_plot.py  check_aligned_ref.py  collapse.py  compute_primary_read_depth.py  correction_pipeline.sh  download_results.sh  evaluate_real_reads.py  evaluate_real_reads_to_genome.py  evaluate_simulated_reads.py  evaluate_sirv_splice_sites.py  evaluate_sirv_to_transcriptome.py  filter_reads_on_length.py  generate_transcriptome_from_gtf.py  make_all_plots.sh  plot_sim_data.py  plots.py  remove_perfect_substrings.py  run_simulations.sh  simulate_reads.py  split_accessions.py  subsample_fastq.py  sum_exon_lengths.py
scripts/DAZ_experiment/: evaluate_simulated_reads.py  generate_abundance.py  run_RBMY1A1_experiments.sh  run_TSPY_experiments.sh  run_daz_experiments.sh
scripts/SNP_experiment/: evaluate_simulated_reads.py  plot_frac_switches.py  run_mutation_simulations.sh  simulate_reads.py
scripts/exon_experiment/: evaluate_simulated_reads.py  plot_exon_data.py  plot_frac_switches.py  plot_sim_data.py  run_exon_simulations.sh  simulate_reads.py
scripts/exon_perturbation_experiment/: evaluate_simulated_reads.py  plot_frac_switches.py  run_exon_simulations.sh  simulate_reads.py
scripts/exon_perturbation_sirv/: evaluate_simulated_reads.py  get_distance_between_sirv_transcripts.py  get_supporting_reads.py  plot_frac_switches.py  plot_mutation_data.py  run_exon_simulations.sh  sirv_sample_reads.py
scripts/family_experiment/: evaluate_simulated_reads.py  generate_ont_reads.py  generate_transcripts.py  get_exons.py  misc_functions.py  plot_abundance_diff.py  plot_error_rates.py  run_family_experiments.sh
scripts/full_transcriptome_exp/: filter_fastq.py  get_abundance.py  get_error_rates.py  get_sequenced_transcripts.py  plot_abundance.py  plot_abundance_diff.py  plot_error_rates.py  remove_redundant.py  run_full_experiment.sh  simulate_reads.py
scripts/mutation_experiment/: evaluate_simulated_reads.py  plot_frac_switches.py  plot_mutation_data.py  run_mutation_simulations.sh  simulate_reads.py
scripts/sirv_subsample_experiment/: get_error_rates.py  plot_aligned_coverage.py  plot_error_rates.py  run_subsample_experiment.sh  subsample_reads.py
src/isoncorrect/: create_augmented_reference.py  help_functions.py  isONcorrect.py  run_isoncorrect.py
test_data/: 100reads.fq  drosophila_full_cl_id_4700.fastq  drosophila_full_cl_id_950.fastq  sirv_transcriptome.fasta  sirv_transcriptome_flat.fasta  sirv_transcriptome_flat_non_redundant.fasta  six_exons.fa
